# EECS-348-Project

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: test.yaml
docs/meetings/: 2023-09-24.md  2023-10-14.md  2023-11-05.md  2023-11-07.md  2023-11-09.md  2023-11-12.md  2023-11-16.md  2023-11-19.md  2023-12-01.md  2023-12-02.md  2023-12-03.md  TEMPLATE.md
docs/project-plan/: Software Development Plan.docx
docs/software-architecture/: Software-Architecture.docx
docs/software-requirements-spec/: Software-Requirements-Spec.docx
docs/test-cases/: Test-Cases.docx  results
docs/user-manual/: User-Manual.docx
src/: ASTNode.cpp  ASTNode.h  ExpressionParser.cpp  ExpressionParser.h  calculator  main.cpp  version.hpp
tests/: test_ASTNode.cpp  test_ExpressionParser.cpp
